added crud operations for categories
